Fix bottom padding issue on pages
This was causing the scrollbar to appear when it wasn’t needed

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -445,7 +445,7 @@ aside
 .main
   @extend %clearfix
   overflow: hidden
-  padding: 60px 0
+  padding: 60px 0 0 0
   width: 100%
 
   @media screen and (max-width: $break-small)
@@ -556,6 +556,7 @@ aside
   .page
     margin: 0 60px 0 260px
     min-width: 500px
+    padding-bottom: 60px
     width: auto
 
     @media screen and (max-width: $break-medium)
